mappe sturktur, soldout i js

--- a/productlist.html
+++ b/productlist.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="productlist.css"> 
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/productlist.css"> 
 </head>
 <body>
     <main class="grid1-1-1">
@@ -13,16 +13,13 @@
         <template id="productlist_template">
             <article>
                 <a href="produkt.html">
-                    <div>
-                        <img src="https://kea-alt-del.dk/t7/images/webp/1000/1529.webp" alt="">
-                    </div>
+                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1529.webp" alt="">
                     <h2 class="productname">Tee</h2>
-                    <h3 class="price">1899 kr</h3> 
+                    <h3 class="price"><span></span> kr</h3> 
                 </a>
             </article>
         </template>
     </main>
-    
     <script src="js.js"></script>
 </body>
 </html>
