--- a/productlist.html
+++ b/productlist.html
@@ -22,7 +22,7 @@
         <h2 class="page-name">Produktliste</h2>
         <template id="productlist_template">
             <article>
-                <a href="produkt.html">
+                <a class="see-more" href="">
                     <img src="https://kea-alt-del.dk/t7/images/webp/1000/1529.webp" alt="">
                     <div class="grid1-1">
                     <h3 class="productname">Tee</h3>
