--- a/kategori.html
+++ b/kategori.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <header></header>
@@ -20,22 +21,22 @@
         </section>
         <section class="grid1-1-1-1">
             <article class="btn">
-                <a href="produktliste.html">
+                <a href="productlist.html">
                     <h2 class="category">Overdele</h2>
                 </a>
             </article>
             <article class="btn">
-                <a href="produktliste.html">
+                <a href="productlist.html">
                     <h2 class="category">Underdele</h2>
                 </a>
             </article>
             <article class="btn">
-                <a href="produktliste.html">
+                <a href="productlist.html">
                     <h2 class="category">Tilbehør</h2>
                 </a>
             </article>
             <article class="btn">
-                <a href="produktliste.html">
+                <a href="productlist.html">
                     <h2 class="category">Sko</h2>
                 </a>
             </article>
