styr op navigation

--- a/productlist.html
+++ b/productlist.html
@@ -17,7 +17,7 @@
         <ul class="breadcrumb">
             <li><a href="index.html">Forside</a></li>
             <li><a href="kategori.html">Kategori</a></li>
-            <li><a href="produktliste.html">Produktliste</a></li>
+            <li><a href="productlist.html">Produktliste</a></li>
         </ul>
         <h2 class="page-name">Produktliste</h2>
         <template id="productlist_template">
