--- a/produkt.html
+++ b/produkt.html
@@ -17,7 +17,7 @@
             <ul class="breadcrumb">
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="kategori.html">Kategori</a></li>
-                <li><a href="produktliste.html">Produktliste</a></li>
+                <li><a href="productlist.html">Produktliste</a></li>
              </ul>
         </section>
         <section class="grid1-1" class="product-info">
