--- a/kategori.html
+++ b/kategori.html
@@ -18,32 +18,18 @@
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="kategori.html">Kategori</a></li>
              </ul>
-        </section>
-        <section class="grid1-1-1-1">
-            <article class="btn">
-                <a href="productlist.html">
-                    <h2 class="category">Overdele</h2>
-                </a>
-            </article>
-            <article class="btn">
-                <a href="productlist.html">
-                    <h2 class="category">Underdele</h2>
-                </a>
-            </article>
-            <article class="btn">
-                <a href="productlist.html">
-                    <h2 class="category">Tilbehør</h2>
-                </a>
-            </article>
-            <article class="btn">
-                <a href="productlist.html">
-                    <h2 class="category">Sko</h2>
-                </a>
-            </article>
-            </a>
+                <article class="grid1-1-1-1">
+                    <template>
+                        <div class="btn">
+                            <a href="productlist.html">
+                                <h2 class="category">Tøj</h2>
+                            </a>
+                        </div>
+                    </template>
+                </article>
         </section>
     </main>
     <footer></footer>
-    <script src="js.js"></script>
+    <script src="js/category.js"></script>
 </body>
 </html>
