--- a/produkt.html
+++ b/produkt.html
@@ -44,6 +44,6 @@
         </section>
     </main>
     <footer></footer> 
-        <script src="product.js"></script>
+        <script src="js/product.js"></script>
 </body>
 </html>
