--- a/productlist.html
+++ b/productlist.html
@@ -32,6 +32,6 @@
             </article>
         </template>
     </main>
-    <script src="js.js"></script>
+    <script src="js/js.js"></script>
 </body>
 </html>
