--- a/kategori.html
+++ b/kategori.html
@@ -13,7 +13,7 @@
     <main>
          <section>
             <h1 class="brandname">Fashion4you</h1>
-            <h1>Kategori</h1>
+            <h2 class="page-name">Kategori</h2>
             <ul class="breadcrumb">
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="kategori.html">Kategori</a></li>
