--- a/produkt.html
+++ b/produkt.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/style.css">
+
 
 </head>
 <body>
@@ -24,7 +25,7 @@
                 <img class="product_img" src="https://kea-alt-del.dk/t7/images/webp/1000/1532.webp" alt="grey puma t-shirt">
                 <h1 class=brand-name>Puma T-shirt</h1>
                 <h2 class="price">899 kr</h2>
-                <h2>Vælg størrelse</h2>
+                <h2 id="pick_size">Vælg størrelse</h2>
                 <label for="size" class="label">
                     <select id="size" name="size">
                         <option value="X-small">X-small</option>
